...
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:theme="@style/ThemeOverlay.Lawn_Companion.FullscreenContainer"
    tools:context=".ui.IntroActivity" >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/introViewPager"
        android:background="@color/background_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="110dp"
        android:contentDescription="@string/viewPagerDescription"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introViewPager"
        app:tabBackground="@drawable/indicator_selector"
        app:tabIndicatorHeight="0dp" />

...
