<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/cutlog"
        android:title="@string/cutLog"
        android:icon="@drawable/ic_baseline_clipboard_24"/>
</menu>