...
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <!--    The add cut part of the activity -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editCutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/background_black"
        android:theme="@style/Theme.Lawn_Companion.NoActionBar">

...
